# tacvoice

./: .gitignore  README.md
client/: Cargo.toml
client/src/: lib.rs  transcript_parse.rs
client/src/logmeta/: mod.rs  recording_meta.rs  submission_meta.rs
client/src/messages/: detail.rs  dimension.rs  line.rs  line_kind.rs  message.rs  message_group.rs  mod.rs  select_option.rs  table_column.rs  table_def.rs
client/src/wasm/: forms.rs  grpc_client.rs  interface.rs  mod.rs  transcript_fill.rs
doc/: UDS_Deployment.md  UDS_Package.md  UDS_Repository.md
gateway/: Cargo.toml  build.rs
gateway/proto/: recognizer_service.proto  tacvoice_service.proto  transcriber_service.proto
gateway/src/: config.rs  gateway.rs  lib.rs
gateway/src/grpc/: mod.rs  recognizer.RecognizerService.rs  recognizer.rs  tacvoice.TacvoiceService.rs  tacvoice.rs  transcriber.TranscriberService.rs  transcriber.rs
gateway/src/service_gateways/: mod.rs  recognizer_gateway.rs  tacvoice_gateway.rs  transcriber_gateway.rs
service/: Cargo.toml
service/assets/www/: index.html
service/assets/www/.well-known/tacvoice/: oidc.json
service/assets/www/css/: CommLog.css  forms.css  tacnet.css
service/assets/www/js/: app.js  audio-processor.js  auth-oidc.js  install.js  sentences.json  sw.js  voskload.js
service/assets/xml/inst/tacvoice/: tacvoice_policy.xml
service/scripts/: build_tacvoice.sh  build_uds_package.sh  build_wasm.sh  build_ztxs.sh  deploy_tacvoice.sh  deploy_ztxs.sh  env_build.sh  install_uds.sh  make_html.sh  publish_uds_package.sh  remove_uds.sh  scratch_dirs.sh  stop_services.sh  stop_tacvoice.sh  tacvoice_down.sh  tacvoice_up.sh  tail_services.sh  verify_scratch.sh
service/scripts/drek/: gen_pod.sh
service/scripts/drek/k8s/: tacvoice-pod.yaml
service/src/: config.rs  embed.rs  lib.rs  policy.rs
service/src/server/: auth.rs  auth_claims.rs  error.rs  gateway_client.rs  messages.rs  mod.rs  recognition.rs  recognizer.rs  structures.rs  tacvoice.rs  transcriber.rs  transcription.rs
service/src/ztxs/: file-service.rs  key-service.rs  ledger-service.rs  msgrepo.rs  msgrepo_embed.rs  orderwire-service.rs  policy-service.rs  voicerepo.rs  voicerepo_embed.rs
service/test/: cc1Kw9l8.s  cc31LZIZ.s  cc8c4LqM.s  cc8zlTuk.s  ccCyI8lK.s  ccEU4Laa.s  ccGqtQtH.s  ccOKSJy4.s  ccXH4iqK.s  cccNrAUV.s  cccgJehX.s  cceXCyz4.s  ccfUg0YP.s  cclhCKfQ.s  ccmMv6kW.s
uds/: .yamllint  enable_public_clients.sh  host_gateway.sh  install_k3d.sh  install_uds_cli.sh  install_uds_core.sh  install_uds_observability.sh  observability.sh  remove_k3d.sh  remove_uds_cli.sh  remove_uds_core.sh  setup_docker.sh  setup_docker_data_root.sh  tasks.yaml  uds-bundle-app.yaml  uds-bundle.yaml  uds-config-app.yaml  zarf.yaml
uds/bundle-app/: uds-bundle.yaml
uds/chart/: Chart.yaml  values.yaml
uds/chart/templates/: deployment.yaml  peerauthentication.yaml  service.yaml  uds-package.yaml
uds/docs/: README.md  configuration.md  dependencies.md  justifications.md  observability.md
uds/tests/: journey.sh  observability.sh  upgrade.sh
voicedata/src/: fuzzy.rs  gmm_config.rs  handlers.rs  mod.rs  pipeline.rs  structures.rs  voiceprint.rs
