[package]
name = "tv_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
services = { path = "../../ztlb/services" }
ztlb = { path = "../../ztlb/common" }
zt_strcts = { path = "../../ztlb/structs" }

tarpc = { version = "0.37", features = ["serde-transport", "serde1"] }
tokio-util = "0.7"
tonic = "0.14"
tonic-prost="0.14"
tonic-web = "0.14"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "time"] }
prost = "0.14"
hyper = { version = "1.9", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.11"
borsh = "1.6"
hex = "0.4"
sha2 = "0.10"
tower-http = { version = "0.6", features = ["cors"] }
http = "1.4"
axum = { version = "0.8", features = ["ws"] }
tokio-stream = "0.1"
futures-util = "0.3"
async-trait = "0.1"
bs58 = "0.5"
base64 = "0.22"
rust_decimal = { version = "1", default-features = false, features = ["std"] }
rand = "0.10"
dashmap = "6.1"
svix = "1.57"

[build-dependencies]
tonic-build = "0.14"  
prost-build = "0.14"
bincode = "1.3"
