[package]
name = "tacvoice"
version = "0.1.0"
edition = "2021"
authors = ["Neushul <james@neushul.net>"]
description = "Tactical Voice Transcription for Form Filling and Chat integration"
license = "GPL-3.0"
repository = "devserver:/home/nsi/gitrepos/tacvoice.git"
publish = false

[[bin]]
name = "tacvoice"
path = "src/bin/tacvoice-service.rs"

[[bin]]
name = "transcriber"
path = "src/bin/transcriber.rs"

[[bin]]
name = "recognizer"
path = "src/bin/recognizer.rs"

[[bin]]
name = "tvks"
path = "src/ztxs/key-service.rs"

[[bin]]
name = "tvfs"
path = "src/ztxs/file-service.rs"

[[bin]]
name = "tvps"
path = "src/ztxs/policy-service.rs"

[[bin]]
name = "tvws"
path = "src/ztxs/orderwire-service.rs"

[[bin]]
name = "tvls"
path = "src/ztxs/ledger-service.rs"

[[bin]]
name = "voicerepo"
path = "src/ztxs/voicerepo.rs"

[[bin]]
name = "msgrepo"
path = "src/ztxs/msgrepo.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Machine Learning
linfa = "0.8"
linfa-clustering = "0.8"
ndarray = "0.16"
ndarray-stats = "0.7"
ndarray-rand = "0.16"

# Audio processing
claxon = "0.4"
rustfft = "6.1"
dasp = "0.11"
rubato = "2.0"
realfft = "3.3"

# Serialization
tarpc = { version = "0.37", features = ["tokio1", "serde-transport"] }
borsh = { version = "1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
base64 = "0.22"
snowid = "2.0"

# Cryptography (available in all targets)
aes-gcm = "0.10"
sha2 = "0.11"
bs58 = "0.5"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = { version = "1.11.0" }
tlsh = { package = "fast-tlsh", version = "0.1.10" }
imp = "0.1.0"
clap = { version = "4.6", features = ["derive"] }
tokio-util = "0.7"
futures = "0.3"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Binary execution from memory
memfd-exec = "0.2.1"
tokio-native-tls = "0.3.1"
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.11"
futures-util = "0.3"
cpal = "0.17.0"
dirs = "6.0"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
tarpc = { version = "0.37", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
jsonwebtoken = "9"
futures = "0.3"
libc = "0.2"
prost = "0.14"

# Zero Trust libraries (native only)
zt_gateway = { path = "../gateway", package = "tv_gateway" }
zt_services = { path = "../../ztlb/services", package = "services" }
zt_strcts = { path = "../../ztlb/structs" }
ztlb = { path = "../../ztlb/common" }
xmltools = { path = "../../ztlb/xmltools" }
libxml = "0.3"

# Shared tactical message model (native + WASM)
tacvoice-client = { path = "../client" }



# Asset embedding (native only)
rust-embed = "8.11"

# WASM-only dependencies
[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
# Tokio for WASM without networking features
tokio = { version = "1.48", default-features = false, features = ["sync", "macros", "time"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
web-time = "1"
# gRPC-Web and HTTP client for WASM
gloo-net = "0.7"
gloo-timers = { version = "0.3", features = ["futures"] }


[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "0.3"
features = [
    "AudioContext",
    "AudioDestinationNode",
    "BaseAudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioProcessingEvent",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamAudioSourceNode",
    "ScriptProcessorNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletGlobalScope",
    "Navigator",
    "MediaDevices",
    "MediaStreamConstraints",
    "Window",
    "Location",
    "Document",
    "console",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Blob",
    "MediaRecorder",
    "BlobEvent",
    "BlobPropertyBag",
    "HtmlButtonElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "AnalyserNode",
    "MediaStreamAudioSourceNode",
    "HtmlAudioElement",
    "Url",
    "Element",
    "Event",
    "CssStyleDeclaration",
    "MessageEvent",
    "MessagePort",
    "DomTokenList",
    "HtmlSelectElement",
    "Crypto",
    "HtmlAnchorElement",
    "Storage",
    "FileReader",
    "FileList",
    "File",
]

[patch.crates-io]
